@@ -1,3 +1,10 @@
+[4.December 2008]
+- bottompanel.rb, bottompanelstate.rb: "keyboard-driven exchange of items" 
+  has more proper visual representation (biggest displaying bug fixed);
+  It is impossible to go into ItemsExchange mode if the active viking has 
+  nothing to give
+- shielder.rb: Shield disappears after Olaf's death
+
 [28.November 2008]
 - bottompanel.rb, bpvikingview.rb, game.rb, gamestate.rb, inventory.rb:
   after hours of work BottomPanel is repaired after reconstruction;
